# le-slider-io

./: .gitignore  README.md  pyproject.toml
src/le_slider_io/: __init__.py  recording.py  schema.py
test/: conftest.py  test_recording.py  test_schema.py
